# PathTracing

./: CMakeLists.txt  Document.docx  README.md  parameter.txt  parameter2(change the name to 'parameter' to make it work).txt
OpenGL/: freeglut.lib  freeglutd.lib
PathTracing/: CMakeLists.txt  Camera.h  Material.h  MathFunc.h  Object.cpp  Object.h  PathTracer.cpp  PathTracer.h  Sphere.cpp  Sphere.h  main.cpp
scene_1_obj/: scene01_parameters.txt
scene_2_obj/: scene02_parameters.txt
